# compact_sparse_hash

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  hashmap.cpp  hashset.cpp  minimal_example.cpp  serialization_and_memsize.cpp
include/tudocomp/util/: compact_displacement_hash.hpp  compact_hash.hpp  compact_sparse_displacement_hash.hpp  compact_sparse_hash.hpp  heap_size.hpp  serialization.hpp
include/tudocomp/util/compact_hash/: entry_t.hpp  hash_functions.hpp  size_manager_t.hpp
include/tudocomp/util/compact_hash/common/index_structure/: elias_gamma_displacement_table_t.hpp
include/tudocomp/util/compact_hash/index_structure/: compact_displacement_table_t.hpp  cv_bvs_t.hpp  displacement_t.hpp  elias_gamma_displacement_table_t.hpp  layered_displacement_table_t.hpp  naive_displacement_table_t.hpp
include/tudocomp/util/compact_hash/map/: hashmap_t.hpp  typedefs.hpp  val_quot_bucket_layout_t.hpp
include/tudocomp/util/compact_hash/set/: hashset_t.hpp  quot_bucket_layout_t.hpp  typedefs.hpp
include/tudocomp/util/compact_hash/storage/: bucket_t.hpp  buckets_bv_t.hpp  plain_sentinel_t.hpp
include/tudocomp/util/compact_hashmap/: decomposed_key_t.hpp  entry_t.hpp  generic_compact_hashmap.hpp  hash_functions.hpp  satellite_data_config_t.hpp  sentinel_config_t.hpp  size_manager_t.hpp  util.hpp
include/tudocomp/util/compact_hashmap/index_structure/: cv_bvs_t.hpp  displacement_t.hpp  elias_gamma_displacement_table_t.hpp
include/tudocomp/util/compact_hashmap/storage/: bucket_data_layout_t.hpp  bucket_t.hpp  buckets_bv_t.hpp  entry_ptr_t.hpp  plain_sentinel_t.hpp  quot_val_data.hpp  sparse_pos_t.hpp  val_quot_ptrs_t.hpp
include/tudocomp/util/compact_hashset/: decomposed_key_t.hpp  entry_t.hpp  generic_compact_hashset.hpp  hash_functions.hpp  satellite_data_config_t.hpp  sentinel_config_t.hpp  size_manager_t.hpp  util.hpp
include/tudocomp/util/compact_hashset/index_structure/: cv_bvs_t.hpp  displacement_t.hpp  elias_gamma_displacement_table_t.hpp
include/tudocomp/util/compact_hashset/storage/: bucket_data_layout_t.hpp  bucket_t.hpp  buckets_bv_t.hpp  entry_ptr_t.hpp  quot_data.hpp  quot_ptrs_t.hpp  sparse_pos_t.hpp
include/tudocomp/util/compact_hashtable/: adapter.hpp  bucket_t.hpp  generic_compact_hashtable.hpp  hash_functions.hpp  placement.hpp  size_manager_t.hpp  sparse_pos_t.hpp  table.hpp  util.hpp  val_quot_ptrs_t.hpp
include/tudocomp/util/compact_hashtable/index_structure/: cv_bvs_t.hpp  displacement_t.hpp  elias_gamma_displacement_table_t.hpp
include/tudocomp/util/compact_hashtable/storage/: bucket_t.hpp  buckets_bv_t.hpp  plain_sentinel_t.hpp  quot_val_data.hpp  sparse_pos_t.hpp  val_quot_ptrs_t.hpp
include/tudocomp/util/compact_sparse_hashtable/: base_table_t.hpp  bucket_element_t.hpp  bucket_t.hpp  hash_functions.hpp  size_manager_t.hpp  sparse_pos_t.hpp  util.hpp  val_quot_ptrs_t.hpp
include/tudocomp/util/v2/: adapter.hpp  bucket_t.hpp  decomposed_key_t.hpp  hash_functions.hpp  placement.hpp  quot_val_data.hpp  sparse_pos_t.hpp  table.hpp  val_quot_ptrs_t.hpp
test/: CMakeLists.txt  compact_hash_displacement_tests.cpp  compact_hash_elias_displacement_tests.cpp  compact_hash_tests.cpp  compact_hash_tests.template.hpp  compact_hashset_tests.template.hpp  compact_sparse_hash_displacement_tests.cpp  compact_sparse_hash_elias_displacement_tests.cpp  compact_sparse_hash_tests.cpp  compact_sparse_hashset_displacement_tests.cpp  compact_sparse_hashset_elias_displacement_tests.cpp  compact_sparse_hashset_serialization_tests.cpp  compact_sparse_hashset_tests.cpp  sandbox_test.cpp  v2_tests.cpp
test/test/: testsuite.cmake
